--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "babel-node src/init.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,12 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "pug": "^3.0.2"
   },
   "devDependencies": {
