--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.2.1",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2"
   },
