--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "googleapis": "^39.2.0",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
