--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/youredith/webster#readme",
   "dependencies": {
+    "@googleapis/people": "^1.0.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "connect-mongo": "^4.6.0",
@@ -27,6 +28,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "pug": "^3.0.2"
   },
   "devDependencies": {
