--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "body-parser": "^1.19.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
+    "express-openid-connect": "^2.7.1",
     "express-session": "^1.17.2",
     "googleapis": "^39.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
