--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
