--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/init.js"
+    "dev": "nodemon --exec babel-node src/init.js",
+    "assets": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,6 @@
   },
   "homepage": "https://github.com/youredith/webster#readme",
   "dependencies": {
-    "@googleapis/people": "^1.0.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "connect-mongo": "^4.6.0",
@@ -32,11 +32,18 @@
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/node": "^7.16.7",
-    "@babel/preset-env": "^7.16.7"
+    "@babel/preset-env": "^7.16.7",
+    "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
+    "sass": "^1.49.11",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.71.0"
   }
 }
